--- a/asgmt_08/package.json
+++ b/asgmt_08/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "asgmt_07",
+  "name": "asgmt_08",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
@@ -13,7 +13,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "@react-native-picker/picker": "2.7.5"
+    "react-native-maps": "1.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
