--- a/asgmt_13/package.json
+++ b/asgmt_13/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expocontact",
+  "name": "asgmt_13",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
@@ -13,8 +13,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "expo-contacts": "~13.0.5",
-    "expo-sms": "~12.0.1"
+    "expo-contacts": "~13.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
